# easy-ocr-api

./: README.md  api.py  pyproject.toml
