[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Andrew Chen <yongjhih@gmail.com>"]

[tool.poetry.dependencies]
python = "3.12.3"
uplink = {extras = ["aiohttp"], version = "^0.9.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
